[package]
name = "egui-datepicker"
version = "0.3.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Adds date picker widget for egui gui library"
keywords = ["gui"]
categories = ["gui"]
repository = "https://github.com/Shadr/egui-datepicker"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.18"
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }

[[example]]
name = "simple"
